outputs_20260330-085215-c63974f1/codegen/production/build_logs/compiler_stderr.log
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_g4di7jn1\src\egtm_atom_3_phase_inverter_pwm.c:15:10: fatal error: IfxPort_Pinmap.h: No such file or directory
   15 | #include "IfxPort_Pinmap.h"
      |          ^~~~~~~~~~~~~~~~~~
compilation terminated.

In file included from C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity.h:22,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_g4di7jn1\test\test_egtm_atom_3_phase_inverter_pwm.c:1:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_g4di7jn1\test\test_egtm_atom_3_phase_inverter_pwm.c: In function 'test_TC_G2_002_init_sets_initial_duty_and_deadtime':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_g4di7jn1\test\test_egtm_atom_3_phase_inverter_pwm.c:94:140: error: subscripted value is neither array nor pointer nor vector
   94 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEADTIME_RISING_US,  mock_IfxEgtm_Pwm_updateChannelDeadTimeImmediate_lastDtRising[0], "Rising dead-time for channel 0 must be 1.0 us");
      |                                                                                                                                            ^
C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity_internals.h:1119:183: note: in definition of macro 'UNITY_TEST_ASSERT_FLOAT_WITHIN'
 1119 | #define UNITY_TEST_ASSERT_FLOAT_WITHIN(delta, expected, actual, line, message)                   UnityAssertFloatsWithin((UNITY_FLOAT)(delta), (UNITY_FLOAT)(expected), (UNITY_FLOAT)(actual), (message), (UNITY_LINE_TYPE)(line))
      |                                                                                                                                                                                       ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_g4di7jn1\test\test_egtm_atom_3_phase_inverter_pwm.c:94:5: note: in expansion of macro 'TEST_ASSERT_FLOAT_WITHIN_MESSAGE'
   94 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEADTIME_RISING_US,  mock_IfxEgtm_Pwm_updateChannelDeadTimeImmediate_lastDtRising[0], "Rising dead-time for channel 0 must be 1.0 us");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_g4di7jn1\test\test_egtm_atom_3_phase_inverter_pwm.c:95:140: error: subscripted value is neither array nor pointer nor vector
   95 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEADTIME_RISING_US,  mock_IfxEgtm_Pwm_updateChannelDeadTimeImmediate_lastDtRising[1], "Rising dead-time for channel 1 must be 1.0 us");
      |                                                                                                                                            ^
C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity_internals.h:1119:183: note: in definition of macro 'UNITY_TEST_ASSERT_FLOAT_WITHIN'
 1119 | #define UNITY_TEST_ASSERT_FLOAT_WITHIN(delta, expected, actual, line, message)                   UnityAssertFloatsWithin((UNITY_FLOAT)(delta), (UNITY_FLOAT)(expected), (UNITY_FLOAT)(actual), (message), (UNITY_LINE_TYPE)(line))
      |                                                                                                                                                                                       ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_g4di7jn1\test\test_egtm_atom_3_phase_inverter_pwm.c:95:5: note: in expansion of macro 'TEST_ASSERT_FLOAT_WITHIN_MESSAGE'
   95 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEADTIME_RISING_US,  mock_IfxEgtm_Pwm_updateChannelDeadTimeImmediate_lastDtRising[1], "Rising dead-time for channel 1 must be 1.0 us");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_g4di7jn1\test\test_egtm_atom_3_phase_inverter_pwm.c:96:140: error: subscripted value is neither array nor pointer nor vector
   96 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEADTIME_RISING_US,  mock_IfxEgtm_Pwm_updateChannelDeadTimeImmediate_lastDtRising[2], "Rising dead-time for channel 2 must be 1.0 us");
      |                                                                                                                                            ^
C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity_internals.h:1119:183: note: in definition of macro 'UNITY_TEST_ASSERT_FLOAT_WITHIN'
 1119 | #define UNITY_TEST_ASSERT_FLOAT_WITHIN(delta, expected, actual, line, message)                   UnityAssertFloatsWithin((UNITY_FLOAT)(delta), (UNITY_FLOAT)(expected), (UNITY_FLOAT)(actual), (message), (UNITY_LINE_TYPE)(line))
      |                                                                                                                                                                                       ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_g4di7jn1\test\test_egtm_atom_3_phase_inverter_pwm.c:96:5: note: in expansion of macro 'TEST_ASSERT_FLOAT_WITHIN_MESSAGE'
   96 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEADTIME_RISING_US,  mock_IfxEgtm_Pwm_updateChannelDeadTimeImmediate_lastDtRising[2], "Rising dead-time for channel 2 must be 1.0 us");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_g4di7jn1\test\test_egtm_atom_3_phase_inverter_pwm.c:98:141: error: subscripted value is neither array nor pointer nor vector
   98 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEADTIME_FALLING_US, mock_IfxEgtm_Pwm_updateChannelDeadTimeImmediate_lastDtFalling[0], "Falling dead-time for channel 0 must be 1.0 us");
      |                                                                                                                                             ^
C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity_internals.h:1119:183: note: in definition of macro 'UNITY_TEST_ASSERT_FLOAT_WITHIN'
 1119 | #define UNITY_TEST_ASSERT_FLOAT_WITHIN(delta, expected, actual, line, message)                   UnityAssertFloatsWithin((UNITY_FLOAT)(delta), (UNITY_FLOAT)(expected), (UNITY_FLOAT)(actual), (message), (UNITY_LINE_TYPE)(line))
      |                                                                                                                                                                                       ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_g4di7jn1\test\test_egtm_atom_3_phase_inverter_pwm.c:98:5: note: in expansion of macro 'TEST_ASSERT_FLOAT_WITHIN_MESSAGE'
   98 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEADTIME_FALLING_US, mock_IfxEgtm_Pwm_updateChannelDeadTimeImmediate_lastDtFalling[0], "Falling dead-time for channel 0 must be 1.0 us");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_g4di7jn1\test\test_egtm_atom_3_phase_inverter_pwm.c:99:141: error: subscripted value is neither array nor pointer nor vector
   99 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEADTIME_FALLING_US, mock_IfxEgtm_Pwm_updateChannelDeadTimeImmediate_lastDtFalling[1], "Falling dead-time for channel 1 must be 1.0 us");
      |                                                                                                                                             ^
C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity_internals.h:1119:183: note: in definition of macro 'UNITY_TEST_ASSERT_FLOAT_WITHIN'
 1119 | #define UNITY_TEST_ASSERT_FLOAT_WITHIN(delta, expected, actual, line, message)                   UnityAssertFloatsWithin((UNITY_FLOAT)(delta), (UNITY_FLOAT)(expected), (UNITY_FLOAT)(actual), (message), (UNITY_LINE_TYPE)(line))
      |                                                                                                                                                                                       ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_g4di7jn1\test\test_egtm_atom_3_phase_inverter_pwm.c:99:5: note: in expansion of macro 'TEST_ASSERT_FLOAT_WITHIN_MESSAGE'
   99 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEADTIME_FALLING_US, mock_IfxEgtm_Pwm_updateChannelDeadTimeImmediate_lastDtFalling[1], "Falling dead-time for channel 1 must be 1.0 us");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_g4di7jn1\test\test_egtm_atom_3_phase_inverter_pwm.c:100:141: error: subscripted value is neither array nor pointer nor vector
  100 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEADTIME_FALLING_US, mock_IfxEgtm_Pwm_updateChannelDeadTimeImmediate_lastDtFalling[2], "Falling dead-time for channel 2 must be 1.0 us");
      |                                                                                                                                             ^
C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity_internals.h:1119:183: note: in definition of macro 'UNITY_TEST_ASSERT_FLOAT_WITHIN'
 1119 | #define UNITY_TEST_ASSERT_FLOAT_WITHIN(delta, expected, actual, line, message)                   UnityAssertFloatsWithin((UNITY_FLOAT)(delta), (UNITY_FLOAT)(expected), (UNITY_FLOAT)(actual), (message), (UNITY_LINE_TYPE)(line))
      |                                                                                                                                                                                       ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_g4di7jn1\test\test_egtm_atom_3_phase_inverter_pwm.c:100:5: note: in expansion of macro 'TEST_ASSERT_FLOAT_WITHIN_MESSAGE'
  100 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEADTIME_FALLING_US, mock_IfxEgtm_Pwm_updateChannelDeadTimeImmediate_lastDtFalling[2], "Falling dead-time for channel 2 must be 1.0 us");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
